combined tour observers